--- a/index.html
+++ b/index.html
@@ -2,18 +2,98 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Bella Bujak's Portfolio</title>
+    <title>Bella Bujak CV</title>
   </head>
   <body>
-      <h1>Bella Bujak's Portfolio</h1>
-      <h2>I'm a digital analytics implementation specialist, aspiring to be a web developer</h2>
-      <hr/>
-      <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-      <a href="./public/movie-ranking.html"><img src="./assets/images/movie-ranking.png" alt="Screenshot of Bella's top pics project" height="200"></a>
-      <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-      <a href="./public/birthday-invite.html"><img src="./assets/images/birthday-invite.png" alt="Screenshot of Bella's birthday invite project" height="200"></a>
-      <hr/>
-      <a href="./public/about.html">About Me</a>
-      <a href="./public/contact.html">Contact Me</a>
-  </body>
+    <h1>Bella Bujak (she/her)</h1>
+    <img src="./assets/images/BellaBujak2.jpg.jpg" alt="Bella headshot" height=300/>
+    <h2>Profile</h2>
+    <p>
+      A digital analytics implementation specialist with over seven years of
+      experience, aspiring to be a web developer. <a href="./public/portfolio.html">You can find my portfolio here.</a>
+    </p>
+    <hr />
+    <h2>Experience</h2>
+    <h3>Not On The High Street</h3>
+    <h4>Lead Implementation Analyst</h4>
+    <h5> April 2022 - Present</h5>
+    <p>
+        <ul>
+            <li>In April 2022 I was promoted to Lead Implementation Analyst, leading the implementation team and working closely with the digital product team to prioritise projects.</li>
+        </ul></p>
+    <h5>August 2020 - April 2022</h5> 
+    <p>
+        <ul>
+            <li>Begun working for Not On The High Street as a Senior Implementation Analyst, defining the strategy for improving tracking across web and native iOS and Android apps.</li>
+            <li>Key responsibilities have included defining and implementing tracking for new features, as well as metrics to assess performance of multivariate testing, working closely with product managers, developers, data/analytics engineers and insight analysts.</li>
+            <li>Throughout my time I also worked closely with product and marketing teams to maintain and implement third party technologies such as Algonomy (product recommendations) and various CRM technologies.</li>
+            <li>Notable projects:
+                <ul>
+                    <li>Procuring and onboarding automated analytics QA tool ObservePoint</li>
+                    <li>Integrating OneTrust cookie consent solution across all existing third party technologies</li>
+                    <li>Integration of Appsflyer for tracking app download and purchase attribution, including postbacks to third parties</li>
+                    <li>Implementation of Google Tag Manager Server-Side with custom set-up on Google CloudRun</li>
+                    <li>Implementation of bespoke tracking within multivariate testing tool Optimizely</li>
+                    <li>Owning the project to migrate to GA4, including data capture and working closely with the data engineering and analytics engineering teams to ingest and transform the data in Data Warehouse pipelines downstream of BigQuery</li>
+                </ul>
+            </li>
+        </ul>
+    </p>
+    <h3>DQ&A (Incubeta)</h3>
+    <h4>Senior Web Analyst</h4>
+    <h5> April 2019 - July 2020</h5>
+    <p>
+       <ul>
+           <li>Working for DQ&A, a company of digital marketing specialists with an applied focus on adtech and martech, helping clients get the most out of their digital marketing technology.</li>
+           <li>As a Google Marketing Platform Sales Partner, much of my role focussed on working with Google directly and supporting businesses using GA360 and GTM.</li>
+           <li>Notable projects:</li>
+           <ul>
+               <li>Tag Management migration for an investment management company, from 36 GTM containers in EMEA to singular Adobe Launch container. Ongoing support for tracking and insights in GA360 for product development and new campaigns.</li>
+               <li>New bespoke Adobe Analytics implementation for an investment management company at a global level, working closely with stakeholders across business functions in EMEA, APAC and North America, to define requirements and design a best practice implementation design.</li>
+               <li>Full audit of the existing GA implementation for Hobbycraft, ahead of GA360 onboarding, to include best practice recommendations and implementation via Qubit Opentag, specifications for the development team and a roadmap for iterative improvements.</li>
+               <li>Ad-hoc GA360 troubleshooting, GMP product linking and BigQuery set up for businesses across retail, technology, and travel industries.</li>
+           </ul>
+       </ul> 
+    </p>
+    <h3>Wunderman Thompson Commerce</h3>
+    <h4>Implementation Analyst</h4>
+    <h5>July 2016 - April 2019</h5>
+    <p>
+        <ul>
+            <li>Working for global ecommerce agency Wunderman Thompson Commerce (formerly Salmon), within the Digital Intelligence team as an implementation analyst.</li>
+            <li>Wide range of experience across analytics tools for clients in various industries, mainly using Google Analytics, including three clients using GA360, as well as working with clients using Adobe Analytics and IBM Digital Analytics.</li>
+            <li>Key projects include Google Analytics implementations via Google Tag Manager or TealiumIQ, including two migrations to Google Analytics 360 from other tools with the use of TealiumIQ. Other tools I have supported include session replay (SessionCam, ClickTale, IBM Tealeaf, Decibel Insight) and testing tools (Optimizely, Qubit, Monetate)</li>
+            <li>Notable projects:</li>
+            <ul>
+                <li>Implementation of IBM Digital Analytics tags using Tealium, migrating away from hard coded tags, as well as the implementation of Google Analytics 360 in parallel (also via Tealium), for Selfridges, to support both the analytics and marketing teams, and to include the implementation of third party marketing tags. Rigorous QA process with the additional implementation of key user journeys and alerting to changes in tagging using ObservePoint Web Assurance.</li>
+                <li>Implementation clean-up of Adobe Analytics with a focus on streamlining reporting for Sainsbury’s. Gathering requirements across the business to assist with a Tealium-based migration to Google Analytics 360, and leading training sessions with key stakeholders across the business in Google Analytics use.</li>
+                <li>Adobe Analytics analysis and tracking for a leading automotive client. Implementation was part hard coded and required delivery of specifications to (and close work with) developers, as well as partial implementation via Adobe Dynamic Tag Manager, to include Analytics tracking of the ecommerce section of the site, as well as third party marketing tags. This also included the integrations of SessionCam and Monetate.</li>
+                <li>Support with analytics and dataLayer requirements for Google Analytics via Google Tag Manager for DFS Furniture, including the move to GA360, as well as support with using Qubit for testing and ContentSquare to complement GA for deeper analyses of customer journeys.</li>
+            </ul>
+        </ul>
+    </p>
+    <hr/>
+    <h2>Education</h2>
+    <h3>University of Bath</h3>
+    <h4>BSc: Mathematical Sciences with sandwich placement</h4>
+    <h5>September 2010 - July 2015</h5>
+    <p>
+        Time at university included a year long sandwich placement in a climate and market intelligence research consultancy called Seneca, based in Brussels, Belgium.
+    </p>
+    <p>
+        The course contained a variety of mathematical concepts, including a wide array of financial, computer science and optimisation of operational research modules studied in my final year, for more breadth within applied mathematics, including programming using MATLAB and R.
+    </p>
+    <hr/>
+    <h2>Personal Interests</h2>
+    <p>
+        I spend a lot of my time pursuing an active lifestyle - although I never seem to have enough time to fit in absolutely everything that I want to progress in! I completed my first triathlon in 2023 but I also love strength training at the gym and yoga.
+    </p>
+    <p>
+        I'm also a bit of a foodie and love trips to the theatre.
+    </p>
+    <footer>
+        <hr />
+        <p>© 2023 Bella Bujak. All rights reserved.</p>
+      </footer>
+</body>
 </html>
