--- a/public/contact.html
+++ b/public/contact.html
@@ -1,3 +1,22 @@
-<h1>Contact Me</h1>
-
-<p>Email: annabellabujak@yahoo.co.uk</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Contact</title>
+  </head>
+  <body>
+    <h1>Contact Me</h1>
+    <p>
+      Email:
+      <a href="mailto:annabellabujak@yahoo.co.uk">annabellabujak@yahoo.co.uk</a>
+    </p>
+    <hr />
+    <a href="../index.html">Home</a>
+    <a href="./about.html">About Me</a>
+    <a href="./contact.html">Contact Me</a>
+    <footer>
+      <hr />
+      <p>© 2023 Bella Bujak. All rights reserved.</p>
+    </footer>
+  </body>
+</html>
