--- a/public/about.html
+++ b/public/about.html
@@ -1,4 +1,39 @@
-<h1>About Me</h1>
-<p>I studied Mathematical Sciences at The University of Bath. Unsure exactly of what career path to take, I looked for something analytical in the digital world. I started off as a web analyst; finding insights from digital analytics, working on A/B testing ideas and roadmaps, as well as touching on the implementation side of things. Despite not being a massive fan of coding at university, it actually turned out that the implementation side of things was what I really enjoyed most. This is how I ended up specialising as a digital analytics implementation analyst.</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>About</title>
+  </head>
+  <body>
+    <h1>About Me</h1>
+    <p>
+      I studied Mathematical Sciences at The University of Bath. Unsure exactly
+      of what career path to take, I looked for something analytical in the
+      digital world. I started off as a web analyst; finding insights from
+      digital analytics, working on A/B testing ideas and roadmaps, as well as
+      touching on the implementation side of things. Despite not being a massive
+      fan of coding at university, it actually turned out that the
+      implementation side of things was what I really enjoyed most. This is how
+      I ended up specialising as a digital analytics implementation analyst.
+    </p>
 
-<p>Now, after seven years in the digital analytics world, I'm ready to commit to fully taking the plunge with coding and learning web development. While I've dabbled in learning some concepts throughout my career, I have officially started the App Brewery's course "The Complete 2023 Web Development Bootcamp" in November 2023. This website is a working portfolio of what I create as part of the course.</p>
+    <p>
+      Now, after seven years in the digital analytics world, I'm ready to commit
+      to fully taking the plunge with coding and learning web development. While
+      I've dabbled in learning some concepts throughout my career, I have
+      officially started the App Brewery's course "The Complete 2023 Web
+      Development Bootcamp" in November 2023. This website is a working
+      portfolio of what I create as part of the course.
+    </p>
+
+    <p>My full resume can be found back on the <a href="../index.html">homepage</a>.</p>
+    <hr />
+    <a href="../index.html">Home</a>
+    <a href="./about.html">About Me</a>
+    <a href="./contact.html">Contact Me</a>
+    <footer>
+      <hr />
+      <p>© 2023 Bella Bujak. All rights reserved.</p>
+    </footer>
+  </body>
+</html>
